# pig

./: .gitignore  CMakeLists.txt  pigConfig.cmake.in  pigConfig.h.in
include/: AjustesEAtualizacoes.h  Bibliotecas_Basicas.h  CAnimacao.h  CAssetLoader.h  CGeradorParticulas.h  CGerenciadorAnimacoes.h  CGerenciadorObjetos.h  CGerenciadorParticulas.h  CGerenciadorTimers.h  CJogo.h  CMapaCaracteres.h  CMouse.h  CObjeto.h  COffscreenRenderer.h  CParticula.h  CPilhaCoordenada.h  CPoolNumeros.h  CTimer.h  Colisao.h  Desenhar.h  ForcaClass.h  ImagemDeFundo.h  ManipularEsferas.h  ManipularEspaco.h  MouseETeclado.h  PIG.h  PIG_Animations.h  PIG_Fontes.h  PIG_Geometricos.h  PIG_Jogo.h  PIG_Objetos.h  PIG_Pack.h  PIG_Timers.h  PIG_Variaveis.h  SDL_Pack.h  SalvarECarregarSistemas.h  Teclas.h  TexturasEAvisos.h  Tipos.h  Tipos_PIG.h  (+2 more)
src/: AjustesEAtualizacoes.cpp  CAnimacao.cpp  CAssetLoader.cpp  CGeradorParticulas.cpp  CGerenciadorAnimacoes.cpp  CGerenciadorObjetos.cpp  CGerenciadorParticulas.cpp  CGerenciadorTimers.cpp  CJogo.cpp  CMapaCaracteres.cpp  CMouse.cpp  CObjeto.cpp  COffscreenRenderer.cpp  CParticula.cpp  CPilhaCoordenada.cpp  CPoolNumeros.cpp  CTimer.cpp  Colisao.cpp  Desenhar.cpp  ForcaClass.cpp  ImagemDeFundo.cpp  ManipularEsferas.cpp  ManipularEspaco.cpp  MouseETeclado.cpp  PIG_Animations.cpp  PIG_Fontes.cpp  PIG_Geometricos.cpp  PIG_Jogo.cpp  PIG_Objetos.cpp  PIG_Timers.cpp  PIG_Variaveis.cpp  SalvarECarregarSistemas.cpp  Variaveis.cpp  Victor.cpp
